Tighten JWT security and encrypt snapshots
Allow CORS preflight and the public auth/docs routes, update the JWT filter to skip OPTIONS and enforce web/mobile client tokens, and encrypt `DetectionLog.snapshotUrl` with the shared converter.