@@ -6,6 +6,7 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.jspecify.annotations.NullMarked;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -26,8 +27,16 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     private final JwtUtil jwtUtil;
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain)
+    protected void doFilterInternal(HttpServletRequest request,
+                                    HttpServletResponse response,
+                                    FilterChain filterChain)
             throws ServletException, IOException {
+
+        // Skip CORS preflight requests
+        if (HttpMethod.OPTIONS.matches(request.getMethod())) {
+            filterChain.doFilter(request, response);
+            return;
+        }
 
         final String authorizationHeader = request.getHeader("Authorization");
 
@@ -36,6 +45,7 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
         if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
             jwt = authorizationHeader.substring(7);
+
             try {
                 email = jwtUtil.extractUsername(jwt);
             } catch (Exception e) {
@@ -43,9 +53,11 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             }
         }
 
-        if (email != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+        if (email != null &&
+                SecurityContextHolder.getContext().getAuthentication() == null) {
 
             List<String> roles = jwtUtil.extractRoles(jwt);
+
             if (roles == null) {
                 roles = java.util.Collections.emptyList();
             }
@@ -53,39 +65,54 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
             List<SimpleGrantedAuthority> authorities = roles.stream()
                     .map(role -> role.startsWith("ROLE_") ? role : "ROLE_" + role)
                     .map(SimpleGrantedAuthority::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
-            UserDetails userDetails = new org.springframework.security.core.userdetails.User(
-                    email, "", authorities);
+            UserDetails userDetails =
+                    new org.springframework.security.core.userdetails.User(
+                            email,
+                            "",
+                            authorities
+                    );
 
-            // 3. Validate token and enforce client boundaries!
             if (jwtUtil.validateToken(jwt, userDetails)) {
 
                 String client = jwtUtil.extractClient(jwt);
                 String requestURI = request.getRequestURI();
 
-                // Check if a Mobile token is trying to hit a Web route
-                if (requestURI.startsWith("/api/web/") && !"web".equals(client)) {
-                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                    response.setContentType("application/json");
-                    response.getWriter().write("{\"error\": \"Access Denied: Web token required.\"}");
-                    return; // Stop processing and kick them out
+                if (requestURI.startsWith("/api/web/")
+                        && !"web".equals(client)) {
+
+                    response.sendError(
+                            HttpServletResponse.SC_FORBIDDEN,
+                            "Web token required."
+                    );
+                    return;
                 }
 
-                // Check if a Web token is trying to hit a Mobile route
-                if (requestURI.startsWith("/api/mobile/") && !"mobile".equals(client)) {
-                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
-                    response.setContentType("application/json");
-                    response.getWriter().write("{\"error\": \"Access Denied: Mobile token required.\"}");
-                    return; // Stop processing and kick them out
+                if (requestURI.startsWith("/api/mobile/")
+                        && !"mobile".equals(client)) {
+
+                    response.sendError(
+                            HttpServletResponse.SC_FORBIDDEN,
+                            "Mobile token required."
+                    );
+                    return;
                 }
 
-                // If they passed the checks, log them in!
-                UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        userDetails, null, authorities);
+                UsernamePasswordAuthenticationToken auth =
+                        new UsernamePasswordAuthenticationToken(
+                                userDetails,
+                                null,
+                                authorities
+                        );
 
-                authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
-                SecurityContextHolder.getContext().setAuthentication(authToken);
+                auth.setDetails(
+                        new WebAuthenticationDetailsSource()
+                                .buildDetails(request)
+                );
+
+                SecurityContextHolder.getContext()
+                        .setAuthentication(auth);
             }
         }
 
